--- a/React_Lucky_Frontend/src/shared/components/InfoAdiccional/InfoAdiccional.scss
+++ b/React_Lucky_Frontend/src/shared/components/InfoAdiccional/InfoAdiccional.scss
@@ -13,6 +13,12 @@
       width: 95%;
     }
 
+    &__span {
+      color: black;
+      margin-left: 10px;
+      font-weight: 400;
+    }
+
     &__imgBox {
       display: flex;
       justify-content: center;
