--- a/React_Lucky_Frontend/src/shared/components/AdopcionSection/AdopcionSection.scss
+++ b/React_Lucky_Frontend/src/shared/components/AdopcionSection/AdopcionSection.scss
@@ -4,8 +4,9 @@
 }
 
 .c-adopcionSection {
+  width: 90vw;
   &__img {
-    width: 400px;
+    width: 100%;
   }
 
   &__btn {
@@ -30,8 +31,8 @@
     &__img {
       position: absolute;
       width: 16px;
-      left: 46%;
-      bottom: 18%;
+      left: 49%;
+      bottom: 20%;
     }
   }
 
