--- a/React_Lucky_Frontend/src/pages/AnimalsFilter/AnimalsFilter.scss
+++ b/React_Lucky_Frontend/src/pages/AnimalsFilter/AnimalsFilter.scss
@@ -1,14 +1,59 @@
-ul{
-   list-style: none;
+.c-filter-button__submit {
+  text-align: center;
+  margin: 5px;
+  width: 90%;
+  height: 40px;
+  border-radius: 5px;
+  border: 0px;
+  color: rgb(255, 255, 255);
+  background-color: #f8897f;
+  font-size: 16px;
 }
 
-p{
-    margin: none;
+.c-filter-button__delete {
+  text-align: center;
+  margin: 5px;
+  width: 90%;
+  height: 40px;
+  border-radius: 5px;
+  border: 2px solid;
+  background-color: rgb(255, 255, 255);
+  color: #f8897f;
+  border-color: #f8897f;
+  font-size: 16px;
 }
 
-select{
-    margin-left: 20px;
-    width: 300px;
+.c-filter-container__icon {
+  text-align: center;
+  margin: 10px;
+  size: 80px;
+  border-radius: 5px;
+  border: 2px solid;
+  background-color: rgb(255, 255, 255);
+  color: --color--primary;
+  border-color: --color--primary;
+  font-size: 12px;
+}
+
+.c-filter {
+  width: 100vw;
+
+  &__display {
+    outline: none;
+    border-radius: 8px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: transparent;
+    background-image: url("../../assets/Filtros/down-arrow2.png");
+    background-repeat: no-repeat;
+    background-position-x: 98%;
+    background-position-y: 14px;
+    border-bottom: 3px solid #dfdfdf;
+    border-radius: 2px;
+    margin-right: 2rem;
+    padding: 1rem;
+    padding-right: 2rem;
+    width: 260px;
     font-size: 12px;
     border-top: 0px;
     border-left: 0px;
@@ -16,158 +61,122 @@ select{
     background-color: transparent;
     color: rgb(85, 85, 85);
     border-bottom: 1px solid rgb(189, 210, 214);
-}
+    margin-left: 4%;
+    &:focus {
+      border-bottom: 1px solid black;
+    }
 
-form{
-    text-align: left;
+    &:active {
+      border: none;
+    }
+  }
+  &__p {
+    margin-top: 0px;
+    color: var(--color--primary);
+  }
+  &-image {
+    height: 50%;
+    width: 50%;
+    margin-top: 10%;
+    object-fit: contain;
+
+    &__pequeño {
+      height: 30%;
+      width: 30%;
+      margin-top: 30%;
+    }
+
+    &__mediano {
+      height: 45%;
+      width: 45%;
+      margin-top: 20%;
+    }
+
+    &__grande {
+      height: 60%;
+      width: 60%;
+      margin-top: 10%;
+    }
+  }
+
+  &-div {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
     align-items: center;
-}
+    justify-content: space-evenly;
+  }
 
-.c-filter-button__submit{
+  &__title {
+    font-size: 30px;
     text-align: center;
-    margin: 5px;
-    width: 90%;
-    height: 40px;
-    border-radius: 5px;
-    border: 0px;
-    color: rgb(255, 255, 255);
-    background-color: #f8897f;
+    font-weight: 400;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: none;
+
+    &__icon {
+      width: 80px;
+      height: 80px;
+      border-radius: 5px;
+      background-color: white;
+      margin-left: 12px;
+      margin-bottom: 10px;
+      & img {
+        align-items: center;
+        width: fit-content;
+        height: fit-content;
+        size: 20px;
+      }
+    }
+  }
+
+  &__category {
+    margin-left: 20px;
+    margin-bottom: 14px;
     font-size: 16px;
-
+    font-weight: lighter;
+  }
+  &__btns {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 24px;
+  }
 }
 
-.c-filter-button__delete{
-    text-align: center;
-    margin: 5px;
-    width: 90%;
-    height: 40px;
-    border-radius: 5px;
-    border: 2px solid;
-    background-color: rgb(255, 255, 255);
-    color: #f8897f;
-    border-color: #f8897f;
-    font-size: 16px;
+.no-selected {
+  width: 79px;
+  height: 80px;
+  border-radius: 13px;
+  background-color: white;
+  border: 1px solid rgb(156, 156, 156);
+  margin: 6px;
+  overflow: hidden;
+  text-align: center;
 }
 
-.c-filter-container__icon{
-    text-align: center;
-    margin: 10px;
-    size: 80px;
-    border-radius: 5px;
-    border: 2px solid;
-    background-color: rgb(255, 255, 255);
-    color: --color--primary;
-    border-color: --color--primary;
-    font-size: 12px;
+.selected {
+  width: 79px;
+  height: 80px;
+  border-radius: 13px;
+  color: var(--color-secondary);
+  border-color: var(--color-secondary);
+  font-size: 12px;
+  overflow: hidden;
 }
-
-.c-filter{
-    width: 100vw;
-
-    &-image{
-        height: 50%;
-        width: 50%;
-        margin-top: 10%;
-
-        &__pequeño{
-            height: 30%;
-            width: 30%;
-            margin-top: 30%;
-        }
-
-        &__mediano{
-            height: 45%;
-            width: 45%;
-            margin-top: 20%;
-        }
-
-        &__grande{
-            height: 60%;
-            width: 60%;
-            margin-top: 10%;
-        }
-    }
-
-    &-div{
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-    }
-
-    &__title{
-        font-size: 30px;
-        text-align: center;
-    }
-    
-    .container{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        padding: none;
-
-        &__icon{
-            width: 80px;
-            height: 80px;
-            border-radius: 5px;
-            background-color: white;
-            margin-left: 12px;
-            margin-bottom: 10px;    
-            & img{
-                align-items: center;
-                width: fit-content;
-                height: fit-content;
-                size: 20px;
-            }
-            & p{
-                margin: 0px;
-                font-size: 12px;
-                text-align: center;
-                width: fit-content;
-            }
-        }
-    
-    }
-
-    &__category{
-        margin-left: 20px;
-        margin-bottom: 14px;
-        font-size: 16px;
-    }
-
-}
-
-.no-selected{
-    width: 110px;
-    height: 110px;
-    border-radius: 5px;
-    background-color: white;
-    border: 2px solid rgb(156, 156, 156);
-    margin: 10px;
-    justify-content: space-around;
-    margin: none;
-}
-
-.selected{
-    width: 110px;
-    height: 110px;
-    text-align: center;
-    border-radius: 5px;
-    border: 2px solid;
-    background-color: rgb(255, 255, 255);
-    color: #f8897f;
-    border-color: #f8897f;
-    font-size: 12px;
-
-}
-
 
 .x {
-    width: 10px;
-    height: 10px;
-    position: absolute;
-    right: 28px;
-    top: 18px;
-    cursor: pointer;
-    z-index: 99;
-  }
-  
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  right: 28px;
+  top: 18px;
+  cursor: pointer;
+  z-index: 99;
+}
