--- a/React_Lucky_Frontend/src/pages/AnimalsFilter/AnimalsFilter.scss
+++ b/React_Lucky_Frontend/src/pages/AnimalsFilter/AnimalsFilter.scss
@@ -155,7 +155,7 @@
   height: 80px;
   border-radius: 13px;
   background-color: white;
-  border: 1px solid rgb(156, 156, 156);
+  border: 1px solid #01748e;
   margin: 6px;
   overflow: hidden;
   text-align: center;
@@ -166,7 +166,7 @@
   height: 80px;
   border-radius: 13px;
   color: var(--color-secondary);
-  border-color: var(--color-secondary);
+  border: 2px solid var(--color-secondary);
   font-size: 12px;
   overflow: hidden;
 }
