form select modify

--- a/React_Lucky_Frontend/src/pages/AnimalsFilter/AnimalsFilter.scss
+++ b/React_Lucky_Frontend/src/pages/AnimalsFilter/AnimalsFilter.scss
@@ -47,11 +47,11 @@
     background-image: url("../../assets/Filtros/down-arrow2.png");
     background-repeat: no-repeat;
     background-position-x: 98%;
-    background-position-y: 14px;
+    background-position-y: 7px;
     border-bottom: 3px solid #dfdfdf;
     border-radius: 2px;
     margin-right: 2rem;
-    padding: 1rem;
+    padding: 5px;
     padding-right: 2rem;
     width: 260px;
     font-size: 12px;
